Updated license to GPL 3

--- a/SG_PDF2TXT/SG_PDF2TXT.vcxproj
+++ b/SG_PDF2TXT/SG_PDF2TXT.vcxproj
@@ -418,6 +418,7 @@
     <ResourceCompile Include="SG_PDF2TXT.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\LICENSE" />
     <None Include="res\SG_PDF2TXT.rc2" />
   </ItemGroup>
   <ItemGroup>
